<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>tcl.lang</groupId>
    <artifactId>jackal</artifactId>
    <packaging>jar</packaging>
    <version>2.9.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <name>jtcl</name>
    <url>http://jackal.github.io/jtcl/</url>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/jtcl_version.tcl</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/jtcl_version.tcl</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
<!--       <plugin>-->

<!--         &lt;!&ndash; toolchains plugin expects to find $USER/.m2/toolchains.xml &ndash;&gt;-->
<!--         &lt;!&ndash; or use the toolchains.xml in this directory                &ndash;&gt;-->
<!--         &lt;!&ndash; as: mvn (dash)(dash)global-toolchains `pwd`/toolchains.xml &ndash;&gt;-->
<!--         &lt;!&ndash; be sure to edit toolchains.xml to set the path to your java 1.6 sdk &ndash;&gt;-->


<!--         <groupId>org.apache.maven.plugins</groupId>-->
<!--         <artifactId>maven-toolchains-plugin</artifactId>-->
<!--         <version>1.1</version>-->
<!--         <executions>-->
<!--           <execution>-->
<!--             <goals>-->
<!--               <goal>toolchain</goal>-->
<!--             </goals>-->
<!--           </execution>-->
<!--         </executions>-->
<!--         <configuration>-->
<!--         <toolchains>-->
<!--           <jdk>-->
<!--              <version>1.6</version>-->
<!--           </jdk>-->
<!--         </toolchains>-->
<!--        </configuration>-->
<!--       </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <googleJavaFormat/>
                        <removeUnusedImports/>
                    </java>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.codehaus.mojo</groupId>-->
<!--                <artifactId>exec-maven-plugin</artifactId>-->
<!--                <version>1.2</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>gensource</id>-->
<!--                        <phase>process-classes</phase>-->
<!--                        <goals>-->
<!--                            <goal>exec</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <executable>java</executable>-->
<!--                            <classpathScope>compile</classpathScope>-->
<!--                            <arguments>-->
<!--                                <argument>-classpath</argument>-->
<!--                                <classpath/>-->
<!--                                <argument>tcl.pkg.tjc.TJCShell</argument>-->
<!--                                &lt;!&ndash; Uncomment this argument for debugging the TJC generation and build &ndash;&gt;-->
<!--                                &lt;!&ndash;<argument>-debug</argument>&ndash;&gt;-->
<!--                                <argument>./src/main/resources/tcl/pkg/tjc/library/tjc.tjc</argument>-->
<!--                            </arguments>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-antrun-plugin</artifactId>-->
<!--                <version>1.7</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>prepare-package</phase>-->
<!--                        <goals>-->
<!--                            <goal>run</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <tasks>-->
<!--                                <unjar src="tjc.jar"-->
<!--                                       dest="target/classes">-->
<!--                                </unjar>-->
<!--                            </tasks>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>tcl.lang.Shell</mainClass>
                        </manifest>
                        <manifestEntries>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ant-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <id>assembly:package</id>
                        <phase>package</phase>
                        <goals>
                            <!--Work around for http://jira.codehaus.org/browse/MASSEMBLY-97-->
                            <!--as the goal should be attached.-->
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archiverConfig>
                                <defaultDirectoryMode>0755</defaultDirectoryMode>
                            </archiverConfig>
                            <descriptors>
                                <descriptor>src/main/assembly/doc.xml</descriptor>
                                <descriptor>src/main/assembly/src.xml</descriptor>
                                <descriptor>src/main/assembly/bin.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
<!--
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.9</version>
                <configuration>
                    <message>Creating site for ${project.version}</message>
                    <repositoryOwner>jtcl-project</repositoryOwner>
                    <repositoryName>jtcl</repositoryName>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site</phase>
                    </execution>
                </executions>
            </plugin>
-->
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <excludePackageNames>org.codehaus.*</excludePackageNames>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
